# English-tool-Study

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: gui.py
src/.streamlit/: secrets.toml
src/assets/: style.css
src/components/: database_section.py  free_study.py  parameters_page.py  sidebar.py  study_section.py
src/db/: basic.db
src/tools/: fsrs_scheduler.py  llm_tools.py  sql_tool.py  validator_tool.py
src/utils/: config.py
