[project]
name = "english-study"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "sqlalchemy==2.0.44",
    "matplotlib==3.10.7",
    "torch==2.8.0",
    "numpy==2.2.6",
    "spacy==3.8.8",
    "scikit-learn==1.7.2",
    "beautifulsoup4==4.14.2",
    "requests==2.32.5",
    "lxml==6.0.2",
    "tqdm==4.67.1",
    "kokoro==0.7.16",
    "streamlit==1.51.0",
    "transformers==4.57.1",
    "pandas==2.2.3"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

# Para src layout
[tool.setuptools]
py-modules = []